backround text no longer squished when the abstract isn't long enought

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,3 +191,7 @@ article .document-thumbnail img {
 #metadata table td, #metadata table th {
 	padding: 0.5rem 1rem;
 }
+
+#background {
+	clear: both;
+}
